kubeconfig/mongo/ocp-single-cluster/mongo-client-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-client
  labels:
    name: mongo-client
spec:
  type: ClusterIP
  ports:
    - name: mongo-port
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
