kubeconfig/mongo/ocp-single-cluster/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
  clusterIP: None
  selector:
    app: mongo
