kubeconfig/mongo/ocp-single-cluster/defaultdeny.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
